[gd_scene format=4 uid="uid://cb541bsl7dfsu"]

[ext_resource type="Script" uid="uid://bi7olhbpff4dy" path="res://dummy_map.gd" id="1_hl7yk"]
[ext_resource type="PackedScene" uid="uid://c6faqnn12ba5a" path="res://simple_tiles.tscn" id="1_o3jlj"]
[ext_resource type="Script" uid="uid://dj3bf5ojea3v4" path="res://start_point.gd" id="2_a2kly"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hl7yk"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1bqvh"]
radius = 15.0

[node name="DummyMap" type="Node2D" unique_id=955376474]
script = ExtResource("1_hl7yk")

[node name="SimpleTiles" parent="." unique_id=1840678148 instance=ExtResource("1_o3jlj")]
unique_name_in_owner = true
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAGAAIAAAAVAAAAAAAFAAIAAAAVAAAAAAAFAAMAAAAVAAAAAAAFAAQAAAAVAAAAAAAEAAQAAAAUAAAAAAAGAAMAAAAXAAAAAAAHAAMAAAAVAAAAAAAIAAMAAAAUAAAAAAAGAAUAAAAUAAAAAAAIAAQAAAAUAAAAAAAHAAUAAAAVAAAAAAAGAAYAAAAUAAAAAAAFAAYAAAAVAAAAAAAEAAYAAAAUAAAAAAADAAYAAAAVAAAAAAAJAAQAAAAVAAAAAAAKAAQAAAAUAAAAAAALAAQAAAAUAAAAAAAMAAQAAAAVAAAAAAAGAAQAAAAUAAAAAAAFAAUAAAAVAAAAAAADAAcAAAAVAAAAAAADAAUAAAAVAAAAAAAEAAMAAAAUAAAAAAAFAAcAAAAVAAAAAAAEAAcAAAAUAAAAAAAEAAUAAAAUAAAAAAALAAUAAAAUAAAAAAALAAYAAAAUAAAAAAALAAcAAAAUAAAAAAAKAAcAAAAUAAAAAAAJAAcAAAAVAAAAAAAIAAcAAAAUAAAAAAAHAAYAAAAVAAAAAAAJAAMAAAAVAAAAAAAKAAMAAAAUAAAAAAAMAAUAAAAVAAAAAAAKAAYAAAAUAAAAAAAJAAYAAAAVAAAAAAAIAAYAAAAUAAAAAAAIAAUAAAAUAAAAAAAJAAUAAAAVAAAAAAAHAAcAAAAVAAAAAAAHAAgAAAAVAAAAAAAGAAgAAAAUAAAAAAAFAAgAAAAVAAAAAAAGAAcAAAAUAAAAAAALAAMAAAAUAAAAAAAKAAUAAAAUAAAAAAAFAAEAAAAUAAAAAAAEAAEAAAAUAAAAAAAEAAAAAAAUAAAAAAADAAAAAAAVAAAAAAACAAAAAAAUAAAAAAABAAAAAAAUAAAAAAAAAAAAAAAUAAAAAAAFAAAAAAAXAAAAAAAGAAAAAAAXAAAAAAAHAAAAAAAXAAAAAAAIAAAAAAAXAAAAAAAJAAAAAAAXAAAAAAAKAAAAAAAXAAAAAAALAAAAAAAXAAAAAAAMAAAAAAAXAAAAAAANAAAAAAAXAAAAAAAOAAAAAAAXAAAAAAAPAAAAAAAXAAAAAAAQAAAAAAAXAAAAAAARAAAAAAAXAAAAAAAUAAAAAAAXAAAAAAAVAAAAAAAXAAAAAAATAAAAAAAXAAAAAAASAAAAAAAXAAAAAAATAAEAAAAUAAAAAAAWAAAAAAAXAAAAAAAXAAAAAAAXAAAAAAAYAAAAAAAXAAAAAAAZAAAAAAAXAAAAAAAaAAAAAAAXAAAAAAAbAAAAAAAXAAAAAAAcAAAAAAAXAAAAAAAdAAAAAAAXAAAAAAAeAAAAAAAXAAAAAAAeAAEAAAAXAAAAAAAeAAIAAAAVAAAAAAAeAAMAAAAXAAAAAAAeAAQAAAAUAAAAAAAeAAUAAAAUAAAAAAAeAAYAAAAUAAAAAAAeAAcAAAAUAAAAAAAeAAgAAAAUAAAAAAAeAAkAAAAUAAAAAAAeAAoAAAAUAAAAAAAeAAsAAAAUAAAAAAAeAAwAAAAUAAAAAAAdAAwAAAAUAAAAAAAcAAwAAAAUAAAAAAAbAAwAAAAUAAAAAAAaAAwAAAAUAAAAAAAZAAwAAAAUAAAAAAAYAAwAAAAUAAAAAAAXAAwAAAAUAAAAAAAWAAwAAAAUAAAAAAAVAAwAAAAUAAAAAAAUAAwAAAAUAAAAAAATAAwAAAAUAAAAAAASAAwAAAAUAAAAAAARAAwAAAAUAAAAAAAQAAwAAAAUAAAAAAAPAAwAAAAUAAAAAAAOAAwAAAAUAAAAAAANAAwAAAAUAAAAAAAMAAwAAAAUAAAAAAALAAwAAAAUAAAAAAAKAAwAAAAUAAAAAAAJAAwAAAAUAAAAAAAIAAwAAAAUAAAAAAAHAAwAAAAUAAAAAAAGAAsAAAAVAAAAAAAFAAsAAAAVAAAAAAAEAAsAAAAVAAAAAAADAAsAAAAVAAAAAAACAAsAAAAVAAAAAAACAAwAAAAUAAAAAAADAAwAAAAUAAAAAAAGAAwAAAAUAAAAAAAFAAwAAAAUAAAAAAAEAAwAAAAUAAAAAAABAAwAAAAUAAAAAAABAAsAAAAVAAAAAAABAAoAAAAVAAAAAAABAAkAAAAVAAAAAAABAAgAAAAVAAAAAAABAAcAAAAVAAAAAAABAAYAAAAVAAAAAAABAAUAAAAVAAAAAAABAAQAAAAVAAAAAAABAAMAAAAVAAAAAAABAAIAAAAVAAAAAAABAAEAAAAVAAAAAAAAAAEAAAAVAAAAAAAAAAIAAAAUAAAAAAAAAAMAAAAUAAAAAAAAAAQAAAAUAAAAAAAAAAUAAAAUAAAAAAAAAAYAAAAUAAAAAAAAAAcAAAAUAAAAAAAAAAgAAAAUAAAAAAAAAAkAAAAUAAAAAAAAAAoAAAAUAAAAAAAAAAsAAAAUAAAAAAAAAAwAAAAUAAAAAAACAAoAAAAUAAAAAAACAAkAAAAUAAAAAAADAAkAAAAVAAAAAAADAAoAAAAUAAAAAAAFAAoAAAAUAAAAAAAGAAoAAAAUAAAAAAAHAAoAAAAUAAAAAAAHAAsAAAAVAAAAAAAIAAsAAAAVAAAAAAAJAAsAAAAVAAAAAAAKAAsAAAAVAAAAAAALAAsAAAAVAAAAAAAMAAsAAAAVAAAAAAANAAsAAAAVAAAAAAAOAAsAAAAVAAAAAAASAAsAAAAVAAAAAAARAAsAAAAVAAAAAAAQAAsAAAAVAAAAAAAPAAsAAAAVAAAAAAATAAsAAAAVAAAAAAAUAAsAAAAVAAAAAAAVAAsAAAAVAAAAAAAWAAsAAAAVAAAAAAAXAAsAAAAVAAAAAAAYAAsAAAAVAAAAAAAZAAsAAAAVAAAAAAAaAAsAAAAVAAAAAAAbAAsAAAAUAAAAAAAcAAsAAAAUAAAAAAAdAAsAAAAUAAAAAAAdAAoAAAAUAAAAAAAcAAoAAAAUAAAAAAAbAAoAAAAUAAAAAAAaAAoAAAAUAAAAAAAZAAoAAAAUAAAAAAAYAAoAAAAUAAAAAAAXAAoAAAAUAAAAAAAWAAoAAAAUAAAAAAAVAAoAAAAUAAAAAAAUAAoAAAAUAAAAAAATAAoAAAAUAAAAAAASAAoAAAAUAAAAAAARAAoAAAAUAAAAAAAQAAoAAAAVAAAAAAAPAAoAAAAUAAAAAAAOAAoAAAAUAAAAAAANAAoAAAAUAAAAAAAMAAoAAAAUAAAAAAAKAAoAAAAUAAAAAAAJAAoAAAAUAAAAAAAIAAoAAAAUAAAAAAALAAoAAAAUAAAAAAAJAAkAAAAVAAAAAAAIAAkAAAAVAAAAAAAHAAkAAAAVAAAAAAAGAAkAAAAUAAAAAAAFAAkAAAAVAAAAAAAEAAkAAAAVAAAAAAAKAAkAAAAUAAAAAAALAAkAAAAUAAAAAAAMAAkAAAAVAAAAAAANAAkAAAAVAAAAAAAOAAkAAAAVAAAAAAAPAAkAAAAUAAAAAAAQAAkAAAAVAAAAAAARAAkAAAAUAAAAAAASAAkAAAAVAAAAAAATAAkAAAAVAAAAAAAUAAkAAAAVAAAAAAAVAAkAAAAUAAAAAAAWAAkAAAAVAAAAAAAXAAkAAAAVAAAAAAAYAAkAAAAVAAAAAAAZAAkAAAAUAAAAAAAaAAkAAAAUAAAAAAAbAAkAAAAUAAAAAAAcAAkAAAAUAAAAAAAdAAkAAAAUAAAAAAAdAAgAAAAUAAAAAAAcAAgAAAAUAAAAAAAbAAgAAAAUAAAAAAAaAAgAAAAUAAAAAAAZAAgAAAAUAAAAAAAYAAgAAAAVAAAAAAAXAAgAAAAUAAAAAAAWAAgAAAAVAAAAAAAVAAgAAAAUAAAAAAAUAAgAAAAVAAAAAAATAAgAAAAUAAAAAAASAAgAAAAVAAAAAAARAAgAAAAUAAAAAAAQAAgAAAAVAAAAAAAPAAgAAAAUAAAAAAAOAAgAAAAVAAAAAAANAAgAAAAUAAAAAAAMAAgAAAAVAAAAAAALAAgAAAAUAAAAAAAKAAgAAAAUAAAAAAAJAAgAAAAVAAAAAAAIAAgAAAAUAAAAAAAEAAgAAAAUAAAAAAADAAgAAAAVAAAAAAACAAgAAAAUAAAAAAACAAcAAAAUAAAAAAACAAYAAAAUAAAAAAACAAUAAAAUAAAAAAACAAQAAAAUAAAAAAACAAMAAAAUAAAAAAACAAIAAAAUAAAAAAACAAEAAAAVAAAAAAADAAEAAAAVAAAAAAAEAAIAAAAUAAAAAAADAAIAAAAVAAAAAAADAAMAAAAVAAAAAAADAAQAAAAVAAAAAAAGAAEAAAAUAAAAAAAHAAEAAAAUAAAAAAAIAAEAAAAUAAAAAAAJAAEAAAAUAAAAAAAKAAEAAAAUAAAAAAALAAEAAAAUAAAAAAAMAAEAAAAUAAAAAAANAAEAAAAUAAAAAAAOAAEAAAAUAAAAAAAPAAEAAAAUAAAAAAAQAAEAAAAUAAAAAAARAAEAAAAUAAAAAAARAAIAAAAVAAAAAAASAAIAAAAVAAAAAAATAAIAAAAVAAAAAAAUAAIAAAAVAAAAAAAVAAIAAAAVAAAAAAAVAAEAAAAUAAAAAAAWAAEAAAAUAAAAAAAUAAEAAAAUAAAAAAASAAEAAAAUAAAAAAAXAAEAAAAUAAAAAAAaAAEAAAAXAAAAAAAZAAEAAAAUAAAAAAAbAAEAAAAXAAAAAAAcAAEAAAAXAAAAAAAdAAEAAAAXAAAAAAAYAAEAAAAUAAAAAAAKAAIAAAAVAAAAAAAJAAIAAAAVAAAAAAAIAAIAAAAUAAAAAAAHAAIAAAAVAAAAAAAPAAIAAAAVAAAAAAAQAAIAAAAVAAAAAAAWAAIAAAAVAAAAAAAXAAIAAAAVAAAAAAAYAAIAAAAVAAAAAAAZAAIAAAAVAAAAAAAaAAIAAAAVAAAAAAAbAAIAAAAVAAAAAAAcAAIAAAAVAAAAAAAdAAIAAAAVAAAAAAAdAAMAAAAXAAAAAAAcAAMAAAAXAAAAAAAbAAMAAAAVAAAAAAAaAAMAAAAUAAAAAAAZAAMAAAAUAAAAAAAYAAMAAAAUAAAAAAAXAAMAAAAUAAAAAAAWAAMAAAAXAAAAAAAVAAMAAAAXAAAAAAANAAMAAAAUAAAAAAAMAAMAAAAVAAAAAAAOAAMAAAAVAAAAAAAPAAMAAAAUAAAAAAAUAAMAAAAXAAAAAAATAAMAAAAXAAAAAAASAAMAAAAXAAAAAAARAAMAAAAUAAAAAAAQAAMAAAAUAAAAAAANAAQAAAAUAAAAAAANAAUAAAAUAAAAAAAOAAQAAAAVAAAAAAAPAAQAAAAUAAAAAAAQAAQAAAAVAAAAAAARAAQAAAAVAAAAAAASAAQAAAAVAAAAAAATAAQAAAAUAAAAAAAUAAQAAAAVAAAAAAAVAAQAAAAVAAAAAAAWAAQAAAAVAAAAAAAXAAQAAAAUAAAAAAAYAAQAAAAVAAAAAAAZAAQAAAAVAAAAAAAaAAQAAAAVAAAAAAAbAAQAAAAVAAAAAAAcAAQAAAAXAAAAAAAdAAQAAAAUAAAAAAAdAAUAAAAUAAAAAAAcAAUAAAAXAAAAAAAbAAUAAAAXAAAAAAAaAAUAAAAUAAAAAAAZAAUAAAAUAAAAAAAYAAUAAAAVAAAAAAAXAAUAAAAUAAAAAAAWAAUAAAAVAAAAAAAVAAUAAAAUAAAAAAAUAAUAAAAVAAAAAAATAAUAAAAUAAAAAAASAAUAAAAVAAAAAAARAAUAAAAUAAAAAAARAAYAAAAUAAAAAAAQAAYAAAAVAAAAAAAPAAYAAAAUAAAAAAAOAAYAAAAVAAAAAAANAAYAAAAUAAAAAAAMAAYAAAAVAAAAAAAOAAUAAAAVAAAAAAAPAAUAAAAUAAAAAAAQAAUAAAAVAAAAAAASAAYAAAAVAAAAAAATAAYAAAAUAAAAAAAUAAYAAAAVAAAAAAAVAAYAAAAUAAAAAAAWAAYAAAAVAAAAAAAXAAYAAAAUAAAAAAAYAAYAAAAVAAAAAAAZAAYAAAAUAAAAAAAaAAYAAAAUAAAAAAAbAAYAAAAUAAAAAAAcAAYAAAAUAAAAAAAdAAYAAAAUAAAAAAAdAAcAAAAUAAAAAAAcAAcAAAAUAAAAAAAbAAcAAAAUAAAAAAAaAAcAAAAUAAAAAAAZAAcAAAAUAAAAAAAYAAcAAAAVAAAAAAAXAAcAAAAUAAAAAAAWAAcAAAAVAAAAAAAVAAcAAAAUAAAAAAAUAAcAAAAVAAAAAAATAAcAAAAUAAAAAAASAAcAAAAVAAAAAAARAAcAAAAUAAAAAAAPAAcAAAAUAAAAAAAQAAcAAAAVAAAAAAAOAAcAAAAVAAAAAAANAAcAAAAUAAAAAAAMAAcAAAAVAAAAAAD//wAAAAAUAAAAAAD//wEAAAAVAAAAAAD//wIAAAAUAAAAAAD//wMAAAAUAAAAAAD//wQAAAAUAAAAAAD//wUAAAAUAAAAAAD//wYAAAAUAAAAAAD//wcAAAAUAAAAAAD//wgAAAAUAAAAAAD//wkAAAAUAAAAAAD//woAAAAUAAAAAAD//wsAAAAUAAAAAAD//wwAAAAUAAAAAAAEAAoAAAAUAAAAAAAHAAQAAAAVAAAAAAALAAIAAAAVAAAAAAAMAAIAAAAVAAAAAAANAAIAAAAUAAAAAAAOAAIAAAAVAAAAAAAfAAIAAAAVAAAAAAA=")

[node name="StartPoint" type="Area2D" parent="." unique_id=1059995643]
unique_name_in_owner = true
position = Vector2(-16, 46)
script = ExtResource("2_a2kly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartPoint" unique_id=925756142]
shape = SubResource("CircleShape2D_hl7yk")

[node name="MainPathfinder" type="NavigationAgent2D" parent="StartPoint" unique_id=362178324]
unique_name_in_owner = true
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.58317125, 0.00025749952, 0.5857103, 1)

[node name="EndPoint" type="Area2D" parent="." unique_id=809168112]
unique_name_in_owner = true
position = Vector2(1010, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndPoint" unique_id=533524911]
shape = SubResource("CircleShape2D_1bqvh")

[node name="Timer" type="Timer" parent="." unique_id=184585600]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
